adjust playbook.yml

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -18,37 +18,18 @@
 
     - name: Create dir for docker compose
       file:
-        path: "/home/{{  ansible_user   }}/app"
+        path: "/home/{{  ansible_user   }}/caddy"
         state: directory
         owner: "{{  ansible_user   }}"
         mode: 0775
 
-    - name: Template docker compose to server
-      template:
-        src: "templates/docker-compose.yml"
-        dest: "/home/{{  ansible_user   }}/app/docker-compose.yml"
+    - name: copy caddy docker compose to server
+      copy:
+        src: files/docker-compose.yml
+        dest: "/home/{{  ansible_user   }}/caddy/docker-compose.yml"
 
-    - name: creating network
+    - name: deploying caddy
       shell: |
-        docker network inspect caddy >/dev/null 2>&1 || \
-        docker network create caddy
-#  START ADDING CODE HERE to send docker compose file including code to server
-#     - name: Create dir for docker compose
-#       file:
-#         path: "/home/{{  ansible_user   }}/caddy"
-#         state: directory
-#         owner: "{{  ansible_user   }}"
-#         mode: 0775
-# 
-#     - name: copy caddy docker compose to server
-#       copy: 
-#         src: files/docker-compose.yml
-#         dest: "/home/{{  ansible_user   }}/caddy/docker-compose.yml"
-# 
-#     - name: deploying caddy
-#       shell: |
-#         cd caddy && docker compose up -d
-# 
-#     - name: deploying app
-#       shell: |
-#         cd app && docker compose up -d
+        cd caddy && docker compose up -d
+
+
