--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,7 +13,16 @@
           name: ansible-lockdown.ubuntu22-cis
         vars:
           ubtu22cis_ipv6_required: true
-
+          ubtu22cis_rule_1_1_1_2: false
+          ubtu22cis_rule_5_3_1: false
+          ubtu22cis_rule_5_3_2: false
+          ubtu22cis_rule_5_3_3: false
+          ubtu22cis_rule_5_3_4: false
+          ubtu22cis_rule_5_3_5: false
+          ubtu22cis_rule_5_3_6: false
+          ubtu22cis_rule_5_3_7: false
+          ubtu22cis_sshd:
+            allow_users: "{{ ansible_user }}"
       become: true
 
     - name: Create dir for docker compose
@@ -28,8 +37,26 @@
         src: files/docker-compose.yml
         dest: "/home/{{  ansible_user   }}/caddy/docker-compose.yml"
 
+    - name: creating network
+      shell: |
+        docker network inspect caddy >/dev/null 2>&1 || \
+        docker network create caddy
+
     - name: deploying caddy
       shell: |
         cd caddy && docker compose up -d
+
+    # - name: Clone app
+    #   shell: |
+    #     git clone git@github.com:jstet/myrtle.git
+    #
+    # - name: Template docker compose to server
+    #   template:
+    #     src: "templates/docker-compose.yml"
+    #     dest: "/home/{{  ansible_user   }}/myrtle/docker-compose.yml"
+    #
+    # - name: deploying app
+    #   shell: |
+    #     cd myrtle && docker compose up -d
 
 
